; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/cavium/thunder/extr_nicvf_queues.c_nicvf_xdp_sq_doorbell.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/cavium/thunder/extr_nicvf_queues.c_nicvf_xdp_sq_doorbell.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nicvf = type { i32 }
%struct.snd_queue = type { i64 }

@NIC_QSET_SQ_0_7_DOOR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nicvf_xdp_sq_doorbell(%struct.nicvf* %0, %struct.snd_queue* %1, i32 %2) #0 {
  %4 = alloca %struct.nicvf*, align 8
  %5 = alloca %struct.snd_queue*, align 8
  %6 = alloca i32, align 4
  store %struct.nicvf* %0, %struct.nicvf** %4, align 8
  store %struct.snd_queue* %1, %struct.snd_queue** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load %struct.snd_queue*, %struct.snd_queue** %5, align 8
  %8 = getelementptr inbounds %struct.snd_queue, %struct.snd_queue* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %12, label %11

11:                                               ; preds = %3
  br label %23

12:                                               ; preds = %3
  %13 = call i32 (...) @wmb()
  %14 = load %struct.nicvf*, %struct.nicvf** %4, align 8
  %15 = load i32, i32* @NIC_QSET_SQ_0_7_DOOR, align 4
  %16 = load i32, i32* %6, align 4
  %17 = load %struct.snd_queue*, %struct.snd_queue** %5, align 8
  %18 = getelementptr inbounds %struct.snd_queue, %struct.snd_queue* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = call i32 @nicvf_queue_reg_write(%struct.nicvf* %14, i32 %15, i32 %16, i64 %19)
  %21 = load %struct.snd_queue*, %struct.snd_queue** %5, align 8
  %22 = getelementptr inbounds %struct.snd_queue, %struct.snd_queue* %21, i32 0, i32 0
  store i64 0, i64* %22, align 8
  br label %23

23:                                               ; preds = %12, %11
  ret void
}

declare dso_local i32 @wmb(...) #1

declare dso_local i32 @nicvf_queue_reg_write(%struct.nicvf*, i32, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
